--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@alch/alchemy-web3": "^1.2.5",
     "dotenv": "^14.0.0",
     "sleep": "^6.3.0",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "ethers": "^5.7.2"
   }
 }
